<resources>
    <string name="app_name">RubberDucky</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_test">Test</string>
    <string name="menu_test2">Test2</string>
    <string name="hours_worked_label">Hours Worked</string>
    <string name="hours_worked">Meow</string>
    <string name="increment_hours">+</string>
    <string name="decrement_hours">-</string>
    <string name="submit">OK</string>
    <string name="bill_time_label">Select number of hours to bill</string>
    <string name="bill_time">Woof</string>
</resources>
