<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/badge1"
          android:title="Badge 1"
          app:showAsAction="always"/>
    <item android:id="@+id/badge2"
        android:title="Badge 2"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_restart"
          android:title="@string/menu_restart"
          app:showAsAction="never" />
    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
    <item android:id="@+id/menu_test"
        android:title="@string/menu_test"
        app:showAsAction="never" />
    <item android:id="@+id/menu_test2"
        android:title="@string/menu_test2"
        app:showAsAction="never" />
</menu>
