<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRH"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:textColorPrimary="@color/colorPrimary"
        android:actionMenuTextColor="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_worked_label"
        android:id="@+id/hoursWorkedLabel"
        android:textStyle="bold"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_alignBottom="@+id/decrement_hours"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/decrement_hours"
        android:id="@+id/decrement_hours"
        android:singleLine="true"
        android:layout_below="@+id/toolbarRH"
        android:layout_toLeftOf="@+id/increment_hours"
        android:layout_toStartOf="@+id/increment_hours" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/increment_hours"
        android:id="@+id/increment_hours"
        android:width="45dp"
        android:height="45dp"
        android:layout_below="@+id/toolbarRH"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_worked"
        android:id="@+id/hoursWorkedTextView"
        android:layout_alignBottom="@+id/hoursWorkedLabel"
        android:layout_centerHorizontal="true" />

</RelativeLayout>